Fix scrollbars radio button focus overflow bug
Move the padding to pipeline-ui and remove negative margin, too. Makes things a bit neater, I should've done this to begin with tbh.

--- a/src/components/chart-ui/chart-ui.scss
+++ b/src/components/chart-ui/chart-ui.scss
@@ -4,6 +4,7 @@
 .pipeline-ui {
   display: flex;
   flex-direction: column;
+  padding: 30px 30px 0;
   height: 100%;
 }
 
