--- a/src/components/sidebar-tabs/sidebar-tabs.scss
+++ b/src/components/sidebar-tabs/sidebar-tabs.scss
@@ -22,6 +22,5 @@
 .pipeline-tabs_tab {
   flex: 2;
   overflow: hidden;
-  padding: 30px 30px 0;
   outline: none;
 }
